--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <div class="card-text">
                                 <p>Com métodos eficientes, nosso robô garante uma assertividade de 93%, garantindo lucros acima da média</p>
                             </div>
-                            <button class="btn btn-primary queroComprar">Quero comprar</button>
+                            <a href="precos.html"><button class="btn btn-primary queroComprar">Quero comprar</button></a>
                         </div>
                        </div> 
                 </div>
