--- a/precos.html
+++ b/precos.html
@@ -23,7 +23,7 @@
                         <ul class="navbar-nav ">
                             <li class="nav-item"><a href="index.html" class="nav-link mr-lg-4">Home</a></li>
                             <li class="nav-item"><a href="precos.html" class="nav-link active mr-lg-4">Preços</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link mr-lg-4">Sobre</a></li>
+                            <li class="nav-item"><a href="sobre.html" class="nav-link mr-lg-4">Sobre</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -80,7 +80,7 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                <button class="btn btn-primary queroComprar">Comprar agora</button>
+                                <a href="compras.html"><button class="btn btn-primary queroComprar">Comprar agora</button></a>
                             </div>
                        </div> 
                 </div>
@@ -132,7 +132,7 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                <button class="btn btn-primary queroComprar">Comprar agora</button>
+                                <a href="compras.html"><button class="btn btn-primary queroComprar">Comprar agora</button></a>
                             </div>
                        </div> 
                 </div>
