--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <ul class="navbar-nav ">
                             <li class="nav-item"><a href="index.html" class="nav-link active mr-lg-4">Home</a></li>
                             <li class="nav-item"><a href="precos.html" class="nav-link mr-lg-4">Preços</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link mr-lg-4">Sobre</a></li>
+                            <li class="nav-item"><a href="sobre.html" class="nav-link mr-lg-4">Sobre</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -52,7 +52,7 @@
                         </div>
                             <div class="card-body">
                                 <div class="card-text">
-                                    <p>Nossos métodos não precisa necessariamente de um computador ou noteebok, nosso robô, roda perfeitamente nos celulares de gerações mais atuais</p>
+                                    <p>Nossos métodos não precisam necessariamente de um computador ou noteebok, nosso robô, roda perfeitamente nos celulares de gerações mais atuais</p>
                                 </div>
 
                                 <div class="card-title">
